<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shubham.tic_tac_toe.MainActivity"
    android:visibility="visible"
    android:background="@drawable/download">

    <ImageButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/box1"
        android:onClick="clickedBox1"
        android:contentDescription="@string/box1"
        android:src="@drawable/ocoin"
        android:scaleType="fitCenter"
        android:padding="0dp"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/box2"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <ImageButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/box2"
        android:onClick="clickedBox2"
        android:contentDescription="@string/box2"
        android:src="@drawable/xcoin"
        android:scaleType="fitCenter"
        android:padding="0dp"
        android:layout_alignBottom="@+id/box5"
        android:layout_marginBottom="115dp"
        android:layout_alignLeft="@+id/box5"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/box3"
        android:layout_alignBottom="@+id/box2"
        android:layout_alignStart="@+id/box6"
        android:onClick="clickedBox3"
        android:contentDescription="@string/box3"
        android:padding="0dp"
        android:src="@drawable/transparent"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:layout_alignLeft="@+id/box6" />

    <ImageButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/box4"
        android:onClick="clickedBox4"
        android:contentDescription="@string/box4"
        android:padding="0dp"
        android:src="@drawable/xcoin"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/box5"
        android:layout_alignRight="@+id/box5"
        android:layout_marginRight="118dp"/>

    <ImageButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/box5"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="clickedBox5"
        android:contentDescription="@string/box5"
        android:padding="0dp"
        android:src="@drawable/xcoin"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/box6"
        android:onClick="clickedBox6"
        android:contentDescription="@string/box6"
        android:padding="0dp"
        android:src="@drawable/xcoin"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/box5"
        android:layout_marginLeft="115dp"
        android:layout_alignLeft="@+id/box5" />

    <ImageButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/box7"
        android:layout_below="@+id/box4"
        android:layout_alignLeft="@+id/box4"
        android:layout_alignTop="@+id/box8"
        android:onClick="clickedBox7"
        android:contentDescription="@string/box7"
        android:padding="0dp"
        android:src="@drawable/xcoin"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/box8"
        android:layout_alignTop="@+id/box5"
        android:layout_marginTop="115dp"
        android:layout_centerHorizontal="true"
        android:onClick="clickedBox8"
        android:contentDescription="@string/box8"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/xcoin"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:id="@+id/box9"
        android:layout_alignTop="@+id/box8"
        android:layout_alignLeft="@+id/box3"
        android:onClick="clickedBox9"
        android:contentDescription="@string/box9"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/xcoin"
        android:background="@android:color/transparent"/>

    <ImageView
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:id="@+id/grid"
        android:src="@drawable/line3h"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="Reset Data"
        android:id="@+id/reset"
        android:onClick="clickedReset"
        android:background="@drawable/button"
        android:singleLine="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/winnerText"
        android:layout_above="@+id/box2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="winner"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:text="New Game"
        android:id="@+id/newGame"
        android:onClick="clickedNewGame"
        android:background="@drawable/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/xwin"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/box1"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/owin"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/box3"
        android:textColor="#ffffff" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageView2"
        android:src="@drawable/xcoin"
        android:layout_above="@+id/newGame"
        android:layout_alignLeft="@+id/newGame" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/xleft"
        android:layout_above="@+id/newGame"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_marginBottom="4dp"
        android:textColor="#ffffff"
        android:layout_toRightOf="@+id/imageView2" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageView3"
        android:src="@drawable/ocoin"
        android:layout_above="@+id/reset"
        android:layout_toStartOf="@+id/oleft"
        android:layout_toLeftOf="@+id/oleft" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/oleft"
        android:layout_above="@+id/reset"
        android:layout_alignEnd="@id/reset"
        android:layout_marginBottom="4dp"
        android:textColor="#ffffff"
        android:layout_alignRight="@id/reset" />

</RelativeLayout>
